--- a/build.gradle
+++ b/build.gradle
@@ -10,17 +10,11 @@ repositories {
 }
 
 dependencies {
-
-    implementation group: 'mysql',
-            name: 'mysql-connector-java',
-            version: '8.08' // MySQL 버전에 따라 버전 번호 변경
-    implementation files('lib/mysql-connector-java-8.0.26.jar')
-
+    //MySQL 연결
+    implementation 'mysql:mysql-connector-java:8.0.23'
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
 
     // 롬복 추가
     implementation 'org.projectlombok:lombok:1.18.30'
@@ -31,9 +25,6 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
 
     testImplementation "org.assertj:assertj-core:3.20.2"
-
-
-
 }
 
 test {
